--- a/style.css
+++ b/style.css
@@ -47,6 +47,12 @@ section{
     align-items: center;
     justify-content: space-between;
 }
+
+/* Latest Works Highlight */
+h2.title.highlight {
+    color: orange;
+}
+
 section .title{
     position: relative;
     text-align: center;
@@ -275,6 +281,12 @@ section .title::after{
     background: #111;
     content: "Roles I played";
 }
+
+/* RS Highlight */
+.card.rs {
+    background: #d28c21 !important;
+}
+
 .services .serv-content .card{
     width: calc(33% - 20px);
     background: #222;
@@ -283,6 +295,7 @@ section .title::after{
     padding: 30px 25px;
     cursor: pointer;
     transition: all 0.3s ease;
+    margin: 0 auto;
 }
 .services .serv-content .card:hover{
     background: #36a58f;
