--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ section .title::after{
 
 /* RS Highlight */
 .card.rs {
-    background: #d28c21 !important;
+    background: #ff6128 !important;
 }
 
 .services .serv-content .card{
